# src/docs/swagger.json
@@ -1132,6 +1132,13 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "Listing ID",
+                        "name": "listing_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "Limit",
                         "name": "limit",
@@ -1193,6 +1200,13 @@
                         "type": "string",
                         "description": "Receiver ID",
                         "name": "receiver_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Listing ID",
+                        "name": "listing_id",
                         "in": "path",
                         "required": true
                     },
@@ -2220,6 +2234,9 @@
             "properties": {
                 "last_message_time": {
                     "type": "integer"
+                },
+                "listing": {
+                    "$ref": "#/definitions/carwise.ListListingInfo"
                 },
                 "user": {
                     "$ref": "#/definitions/carwise.UserInfo"
